<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/word_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordDetailScreen"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/inter"
            android:text="Novice Mode"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/mode_switch"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/mode_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbTint="@drawable/thumb_track"
            app:trackTint="@drawable/switch_track" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mode_layout">

        <TextView
            android:id="@+id/word_syllabics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="ᒪᐢᑭᐦᑭᐩ"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/word_title"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/word_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="maskihkiy"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/word_syllabics"/>

        <ImageView
            android:id="@+id/word_novice_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/verb_label"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/word_title"
            app:layout_constraintStart_toEndOf="@id/word_title"
            app:layout_constraintTop_toTopOf="@id/word_title"
            android:visibility="visible"/>

        <ImageButton
            android:id="@+id/word_audio"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/audio_playback"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/word_title"
            app:layout_constraintStart_toEndOf="@id/word_novice_label"
            app:layout_constraintTop_toTopOf="@id/word_title" />

        <ImageButton
            android:id="@+id/word_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/share"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="@+id/word_title"
            app:layout_constraintStart_toEndOf="@id/word_audio"
            app:layout_constraintTop_toTopOf="@id/word_title" />

        <TextView
            android:id="@+id/word_advanced_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="NI-2"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/word_title"
            app:layout_constraintTop_toBottomOf="@id/word_title"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/word_ipa_transcription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter"
            android:text="/ˈmʌs.kɪh.kiː/"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/word_advanced_label"
            app:layout_constraintTop_toBottomOf="@id/word_title"
            android:visibility="visible"/>
        
        <View
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/word_advanced_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/definitions_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/title_layout">

        <TextView
            android:id="@+id/word_definitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="1. medicine\n2. herb, plant\n3. medicinal root"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/word_definitions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phrases_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/definitions_layout">

        <TextView
            android:id="@+id/word_cree_phrase1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/maskihkiy_cree_phrase1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/word_english_phrase1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/maskihkiy_english_phrase1"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/word_cree_phrase1"
            app:layout_constraintTop_toBottomOf="@id/word_cree_phrase1" />
        <TextView
            android:id="@+id/word_cree_phrase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter"
            android:text="@string/maskihkiy_cree_phrase2"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/word_english_phrase1"
            app:layout_constraintTop_toBottomOf="@id/word_english_phrase1" />
        <TextView
            android:id="@+id/word_english_phrase2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/maskihkiy_english_phrase2"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/word_cree_phrase2"
            app:layout_constraintTop_toBottomOf="@id/word_cree_phrase2" />

        <View
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/word_english_phrase2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/morphology_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phrases_layout"
        android:visibility="visible">

        <TextView
            android:id="@+id/word_morphology_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="Morphological Form"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/word_parts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/maskihkiy_word_parts"
            app:layout_constraintStart_toStartOf="@id/word_morphology_title"
            app:layout_constraintTop_toBottomOf="@id/word_morphology_title"/>

        <TextView
            android:id="@+id/word_morphology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/inter"
            android:text="@string/maskihkiy_morphology"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/word_parts"
            app:layout_constraintStart_toStartOf="@id/word_parts" />

        <View
            android:layout_width="372dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/word_morphology"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/origin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/morphology_layout"
        android:visibility="visible">

        <TextView
            android:id="@+id/word_origin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter"
            android:text="Word Origin"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/word_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter"
            android:text="Information about the word origins of this word... "
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/word_origin_title"
            app:layout_constraintStart_toStartOf="@id/word_origin_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/bottomBar"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rounded_purple_background_rectangle"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_back" />

            <ImageButton
                android:id="@+id/forward_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_forward" />

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/home" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/search" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/menu" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>